# cmake-full-project

./: .gitignore  CMakeLists.txt  README.md
cmake/: CppCheck.cmake  GetFTXUI.cmake  Testing.cmake
src/: CMakeLists.txt
src/calc/: CMakeLists.txt  calc.cpp
src/calc/include/calc/: calc.h
src/calc_console/: CMakeLists.txt
